--- a/style.css
+++ b/style.css
@@ -1,39 +1,48 @@
-*{
-    box-sizing: border-box;
+* {
+    box-sizing: border-box;    
 }
 
-body {
-    background-color: #87CEFA;
-    color: navy;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    line-height: 1.5;
-    text-align: block;
-    width: 600px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.profil_foto {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-   }
-
-.icon {
-    border-radius:50%;
-    width: 50px;
-    height: 50px;
-}
-
-ul, ol {
-    list-style-type: none;
-    padding: 0px;
-}
-
-h1, h2 {
+html {
+    height: 100%; //nastavení obrazovky, aby se mi pozadi neopakovalo
+    font-family: 'Roboto', sans-serif;
     text-align: center;
+    background: linear-gradient(#615dad, #ffc8da);
 }
+
+h1{
+    font-family: 'Roboto', sans-serif;
+    font-size: 40px;  
+}
+
+h2{
+    font-size: 28px;
+}
+p{
+    font-size: 24px;
+}
+
+.box{
+    width: 400px;
+    margin:auto;
+    background: #ffedfe;
+    border-radius: 5px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.profil_foto{
+    border-radius: 50%;
+    width: 200px;
+    border: 1px solid grey;
+}
+
+.icon{
+    width: 50px;
+}
+
+ul{
+    list-style-type: none;
+    display: flex;
+    justify-content: space-around;
+    font-family: 'Roboto', sans-serif;
+    font-size: 24px;
+    }
